# tauri-plugin-icloud-container

./: .gitignore  .markdownlint.json  .markdownlintignore  Cargo.toml  LICENSE  README.md  build.rs  package-lock.json  package.json
.github/workflows/: ci-npm.yml  ci-rust.yml
guest-js/: index.ts
ios/: Package.swift
ios/Sources/: ICloudContainerDTOs.swift  ICloudContainerPlugin.swift  ICloudContainerResolver.swift  ICloudContainerTauriPlugin.swift
ios/Tests/: ICloudContainerTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: copy_item.toml  evict_item.toml  get_attributes.toml  get_container_status.toml  get_container_url.toml  get_item_sync_status.toml  is_ubiquitous.toml  item_exists.toml  start_download.toml  trash_item.toml  unwatch_file.toml  watch_directory.toml  watch_file.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  logging.rs  mobile.rs  models.rs
tests/: container_identity.rs  directory_and_sync.rs  file_io.rs  guest_api_contract.mjs  mobile_bridge.rs  models_and_errors.rs  watchers.rs
