[package]
name = "tauri-plugin-icloud-container"
version = "0.1.0-beta.1"
edition = "2021"
description = "iCloud container access plugin for Tauri 2"
license = "MIT"
readme = "README.md"
repository = "https://github.com/TensorBinge/tauri-plugin-icloud-container"
homepage = "https://github.com/TensorBinge/tauri-plugin-icloud-container"
links = "tauri-plugin-icloud-container"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
serde_json = "1"
log = "0.4"
objc = { version = "0.2", optional = true }

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"

[dev-dependencies]
serde_json = "1"
